Moved .env comment to new line so it doesn't get interpreted in the variable

--- a/.env.example
+++ b/.env.example
@@ -10,4 +10,5 @@ ART19_SHOW_ID=
 ART19_EPISODE_ID=
 
 SLACK_WEBHOOK_URL=
-UPDATE_INTERVAL_HOURS=24 # how frequently data per show should be updated (every x hours)
+# how frequently data per show should be updated (every x hours)
+UPDATE_INTERVAL_HOURS=24
